force-app/main/default/objects/SchedulerEvent__c/fields/Recurrence_Id__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Id__c</fullName>
    <label>RecurrenceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>