force-app/main/default/objects/SchedulerEvent__c/fields/RecurrenceException__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceException__c</fullName>
    <label>RecurrenceException</label>
    <length>200</length>
    <type>Text</type>
</CustomField>