force-app/main/default/objects/SchedulerEvent__c/fields/RecurrenceRule__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceRule__c</fullName>
    <label>RecurrenceRule</label>
    <length>150</length>
    <type>Text</type>
</CustomField>